Finalize for Bug Bash

--- a/config.yaml
+++ b/config.yaml
@@ -18,9 +18,9 @@ staticRedirects:
     from: /grey-redirect
     to: /gray
     statusCode: 308
-# adds authentication to your site
-authentication:
-  policyName: auth02
-  includePaths:
-    - /red # red is locked down
+# adds authentication to your site. Commented out as a policy with the name auth02 must exist
+# authentication:
+#   policyName: auth02
+#   includePaths:
+#     - /red # red is locked down
 
