--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,10 @@ dynamicRedirects:
     from: /grey/*
     to: /gray/:splat
     status: 200
+  -
+    from: /simulated-prefix/*
+    to: /:splat
+    status: 200
   # This is a custom redirect because the status code is 3xx.
 staticRedirects:
   -
