--- a/config.yaml
+++ b/config.yaml
@@ -23,8 +23,8 @@ staticRoutes:
     to: /gray
     status: 308
   -
-    from: /external
-    to: www.example.com
+    from: /external/*
+    to: https://www.example.com
     status: 308
 # adds authentication to your site. Commented out as a policy with the name auth02 must exist
 # authentication:
