--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,15 @@ dynamicRoutes:
     status: 200
   -
     from: /external/*
-    to: https://www.example.com/:splat
+    to: https://www.example.com
+    status: 308
+  -
+    from: /google/*
+    to: https://www.google.com/
+    status: 308
+  -
+    from: /example/test1/:test/test2
+    to: https://www.example.com/:test
     status: 308
 
   # This is a custom redirect because the status code is 3xx.
