abs rewrite in redirects

--- a/config.yaml
+++ b/config.yaml
@@ -24,17 +24,17 @@ dynamicRoutes:
     from: /google/*
     to: https://www.google.com:443
     status: 302
-  -
-    from: /example/test1/:test/test2
-    to: https://popularly-redundant-ferret.dev.pgsdemo.com/example/test1/:test/test2
-    status: 301
-
+    
   # This is a custom redirect because the status code is 3xx.
 staticRoutes:
   -
     from: /grey-redirect
     to: /gray
     status: 308
+  -
+    from: /test-redirect
+    to: https://www.google.com
+    status: 200
 # adds authentication to your site. Commented out as a policy with the name auth02 must exist
 # authentication:
 #   policyName: auth02
