--- a/config.yaml
+++ b/config.yaml
@@ -9,11 +9,11 @@ buildConfiguration:
 dynamicRoutes:
   # This is a rewrite because the status code is 200. It also takes advantage of built-in splat support.
   -
-    from: /grey/*
-    to: /gray/:splat
+    from: /test/*
+    to: /test2/:splat
     status: 200
   -
-    from: /gray/*
+    from: /test2/*
     to: /:splat
     status: 200
 
